Comserv/root/static/css/svg-icons.css
/**
 * SVG Icons CSS
 * Uses locally hosted SVG files for icons
 */

/* Remove all emoji fallback content from icon elements */
[class*="icon-"]::before,
[class*="fas"]::before {
  content: none !important;
}

/* Base icon class */
.icon {
  display: inline-block;
  width: 1em;
  height: 1em;
  margin-right: 0.5em;
  vertical-align: -0.125em;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

/* Common styling for all icons */
.icon, .fas {
  display: inline-block;
  width: 1em;
  height: 1em;
  margin-right: 0.5em;
  vertical-align: -0.125em;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  /* Use currentColor to inherit the text color */
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  -webkit-mask-size: contain;
  mask-size: contain;
  background-color: currentColor;
}

/* SVG mask technique for color inheritance - User Menu Icons */
.icon-user, .fas.fa-user {
  -webkit-mask-image: url('/static/images/icons/user.svg');
  mask-image: url('/static/images/icons/user.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-cog, .fas.fa-cog {
  -webkit-mask-image: url('/static/images/icons/cog.svg');
  mask-image: url('/static/images/icons/cog.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-tachometer-alt, .fas.fa-tachometer-alt {
  -webkit-mask-image: url('/static/images/icons/tachometer-alt.svg');
  mask-image: url('/static/images/icons/tachometer-alt.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-sync, .fas.fa-sync {
  -webkit-mask-image: url('/static/images/icons/sync.svg');
  mask-image: url('/static/images/icons/sync.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-sign-out-alt, .fas.fa-sign-out-alt {
  -webkit-mask-image: url('/static/images/icons/sign-out-alt.svg');
  mask-image: url('/static/images/icons/sign-out-alt.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-sign-in-alt, .fas.fa-sign-in-alt {
  -webkit-mask-image: url('/static/images/icons/sign-in-alt.svg');
  mask-image: url('/static/images/icons/sign-in-alt.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-user-plus, .fas.fa-user-plus {
  -webkit-mask-image: url('/static/images/icons/user-plus.svg');
  mask-image: url('/static/images/icons/user-plus.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-key, .fas.fa-key {
  -webkit-mask-image: url('/static/images/icons/key.svg');
  mask-image: url('/static/images/icons/key.svg');
  background-color: currentColor;
  background-image: none;
}

/* Main Navigation Icons */
.icon-back, .fas.fa-arrow-circle-left {
  -webkit-mask-image: url('/static/images/icons/back.svg');
  mask-image: url('/static/images/icons/back.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-main, .fas.fa-credit-card {
  -webkit-mask-image: url('/static/images/icons/main.svg');
  mask-image: url('/static/images/icons/main.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-home, .fas.fa-home {
  -webkit-mask-image: url('/static/images/icons/home.svg');
  mask-image: url('/static/images/icons/home.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-mail, .fas.fa-envelope {
  -webkit-mask-image: url('/static/images/icons/mail.svg');
  mask-image: url('/static/images/icons/mail.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-workshop, .fas.fa-chalkboard-teacher {
  -webkit-mask-image: url('/static/images/icons/workshop.svg');
  mask-image: url('/static/images/icons/workshop.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-admin, .fas.fa-user-shield {
  -webkit-mask-image: url('/static/images/icons/admin.svg');
  mask-image: url('/static/images/icons/admin.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-todo, .fas.fa-tasks {
  -webkit-mask-image: url('/static/images/icons/todo.svg');
  mask-image: url('/static/images/icons/todo.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-file, .fas.fa-file {
  -webkit-mask-image: url('/static/images/icons/file.svg');
  mask-image: url('/static/images/icons/file.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-upload, .fas.fa-upload {
  -webkit-mask-image: url('/static/images/icons/upload.svg');
  mask-image: url('/static/images/icons/upload.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-log, .fas.fa-list {
  -webkit-mask-image: url('/static/images/icons/log.svg');
  mask-image: url('/static/images/icons/log.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-user-list, .fas.fa-users {
  -webkit-mask-image: url('/static/images/icons/user-list.svg');
  mask-image: url('/static/images/icons/user-list.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-setup, .fas.fa-cogs {
  -webkit-mask-image: url('/static/images/icons/setup.svg');
  mask-image: url('/static/images/icons/setup.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-domain, .fas.fa-globe-americas {
  -webkit-mask-image: url('/static/images/icons/domain.svg');
  mask-image: url('/static/images/icons/domain.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-system, .fas.fa-rocket {
  -webkit-mask-image: url('/static/images/icons/system.svg');
  mask-image: url('/static/images/icons/system.svg');
  background-color: currentColor;
  background-image: none;
}

.icon-ttml, .fas.fa-code {
  -webkit-mask-image: url('/static/images/icons/ttml.svg');
  mask-image: url('/static/images/icons/ttml.svg');
  background-color: currentColor;
  background-image: none;
}
/* ... */

